<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2021 steadybit GmbH. All rights reserved.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.steadybit.demo.shopping</groupId>
    <artifactId>shopping-demo-parent</artifactId>
    <version>${revision}</version>
    <name>steadybit Shopping Demo - Parent</name>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.9</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <modules>
        <module>hot-deals</module>
        <module>bestseller-fashion</module>
        <module>bestseller-toys</module>
        <module>gateway</module>
        <module>checkout</module>
        <module>order</module>
        <module>shared</module>
        <module>shopping-ui</module>
        <module>inventory-service-mock</module>
    </modules>
    <packaging>pom</packaging>
    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <docker.image.prefix>steadybit</docker.image.prefix>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <spring-cloud.version>2023.0.4</spring-cloud.version>
        <!--plugins-->
        <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
        <typescript-generator-maven-plugin.version>3.2.1263</typescript-generator-maven-plugin.version>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
        <license-maven-plugin.version>2.4.0</license-maven-plugin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.steadybit.demo.shopping</groupId>
                <artifactId>shared</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.steadybit.demo.shopping</groupId>
                <artifactId>shopping-ui</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>cz.habarta.typescript-generator</groupId>
                    <artifactId>typescript-generator-maven-plugin</artifactId>
                    <version>${typescript-generator-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>${license-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                                <goal>build-info</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        <rerunFailingTestsCount>2</rerunFailingTestsCount>
                        <includes>
                            <include>**/*Tests.java</include>
                            <include>**/*Test.java</include>
                        </includes>
                        <excludes>
                            <exclude>**/Abstract*.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <inherited>true</inherited>
                <executions>
                    <execution>
                        <!-- Tidy up all POMs before they are published -->
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>oss</flattenMode>
                            <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
                            <pomElements>
                                <distributionManagement>remove</distributionManagement>
                            </pomElements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>ci</id>
            <activation>
                <property>
                    <name>env.CI</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>add-third-party</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>add-third-party</goal>
                                    <goal>download-licenses</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <licensesOutputDirectory>${project.build.directory}/licenses</licensesOutputDirectory>
                            <licensesOutputFile>${project.build.directory}/licenses/licenses.xml</licensesOutputFile>
                            <licenseUrlFileNameSanitizers>
                                <licenseUrlFileNameSanitizer>
                                    <regexp>[\s:]+</regexp>
                                    <replacement>_</replacement>
                                </licenseUrlFileNameSanitizer>
                            </licenseUrlFileNameSanitizers>
                            <outputDirectory>${project.build.directory}/licenses</outputDirectory>
                            <excludedScopes>test,provided</excludedScopes>
                            <excludedGroups>com.steadybit</excludedGroups>
                            <includeOptional>false</includeOptional>
                            <licenseMergesUrl>license-merges.txt</licenseMergesUrl>
                            <organizeLicensesByDependencies>true</organizeLicensesByDependencies>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
